<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bro</string>
    <string name="webService">https://api.getbro.com</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="loginLogoDescription">Bro-Logo</string>
    <string name="loginTitle">bro</string>
    <string name="loginLoginButton">login</string>
    <string name="loginForgotPassword">Forgot Password</string>
    <string name="loginRegister">GetBro - Register now</string>
    <string name="loginEditUsername">username</string>
    <string name="loginEditPassword">password</string>

    <!-- Input Activity -->
    <string name="title_activity_input">Start your Bromance</string>
    <string name="hello_world">Login</string>
    <string name="std_category">Categories</string>
    <string name="more">+</string>
    <string name="title_activity_show_friend">ShowFriendActivity</string>
    <string name="title_activity_friendlist">FriendlistActivity</string>
    <string name="title_activity_display_events">DisplayEventsActivity</string>

    <!-- Profil Activity -->
    <string name="title_activity_profil">Profil</string>
    <string name="profilFollower">follower</string>
    <string name="profilFollow">follow</string>
    <string name="profilEvents">events</string>
    <string name="profilUsername">username: </string>
    <string name="profilSex">sex: </string>
    <string name="profilAge">age: </string>
    <string name="profilImagedescription">This is the profile Image</string>

    <!-- Navigation Drawer-->
    <string-array name="drawer_items">
        <item>Profile</item>
        <item>Friends</item>
        <item>Events</item>
        <item>add Event</item>
    </string-array>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    
    

    <string name="title_activity_login">LoginActivity</string>

</resources>
