<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="9"
        android:contentDescription="@string/loginLogoDescription"
        android:paddingTop="50dp"
        android:src="@drawable/logo_400x400px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:text="@string/loginTitle"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="2"
        android:hint="@string/loginEditUsername"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="2"
        android:gravity="bottom"
        android:hint="@string/loginEditPassword"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@android:color/transparent"
        android:onClick="login"
        android:text="@string/loginForgotPassword"
        android:textSize="12sp" />

    <!-- To draw a border around this button, the drawable butttonbroder is used -->

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_weight="4"
        android:background="@drawable/butttonborder"
        android:onClick="login"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:text="@string/loginLoginButton"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@android:color/transparent"
        android:onClick="login"
        android:text="@string/loginRegister"
        android:textSize="12sp" />

</LinearLayout>