<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profil_background_top"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">

        <com.getbro.bro.UIComponents.CustomTextView
            android:id="@+id/profil_fullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="John Doe"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:layout_weight="40"/>

        <com.getbro.bro.UIComponents.RoundedImageView
            android:id="@+id/profil_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"
            android:layout_gravity="center"
            android:contentDescription="@string/profilImagedescription"
            android:layout_weight="60"
            />

        <LinearLayout
            android:id="@+id/profil_numbers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10">

            <com.getbro.bro.UIComponents.CustomTextView
                android:id="@+id/profil_follower"
                android:text="12"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="33">
            </com.getbro.bro.UIComponents.CustomTextView>

            <com.getbro.bro.UIComponents.CustomTextView
                android:id="@+id/profil_events"
                android:text="4"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33">
            </com.getbro.bro.UIComponents.CustomTextView>

            <com.getbro.bro.UIComponents.CustomTextView
                android:id="@+id/profil_follow"
                android:text="91"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33">
            </com.getbro.bro.UIComponents.CustomTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.getbro.bro.UIComponents.CustomTextView
                android:text="@string/profilFollower"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
            </com.getbro.bro.UIComponents.CustomTextView>

            <com.getbro.bro.UIComponents.CustomTextView
                android:text="@string/profilEvents"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
            </com.getbro.bro.UIComponents.CustomTextView>

            <com.getbro.bro.UIComponents.CustomTextView
                android:text="@string/profilFollow"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">
            </com.getbro.bro.UIComponents.CustomTextView>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>









    <RelativeLayout
        android:paddingTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light">

        <TableLayout
            android:stretchColumns="0, 1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TableRow
                android:layout_width="fill_parent">

                <TextView
                    android:textColor="@color/profil_data_description"
                    android:text="@string/profilUsername"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                </TextView>

                <TextView
                    android:id="@+id/profil_username"
                    android:text=" johnny"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left">
                </TextView>

            </TableRow>
            <TableRow>
                <TextView
                    android:textColor="@color/profil_data_description"
                    android:text="@string/profilSex"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                </TextView>

                <TextView
                    android:id="@+id/profil_sex"
                    android:text=" male"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left">
                </TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:textColor="@color/profil_data_description"
                    android:text="@string/profilAge"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right">
                </TextView>

                <TextView
                    android:id="@+id/profil_age"
                    android:text=" 22"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left">
                </TextView>

            </TableRow>
            </TableLayout>

        </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/background_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="40sp"/>

    </LinearLayout>


</LinearLayout>
